# neuralcham

./: .gitignore  .tarignore  README  README.md  git2tarignore.py  main.py  project.tgz  pyproject.toml  requirements.txt  setup.sh
data/processed/: train_data.json
data/raw/: allcaps_raw.json  biology-focused_raw.json  chemistry_raw.json  comforting_raw.json  confused_raw.json  finnish_raw.json  german_raw.json  html_raw.json  jokey_raw.json  lesswrong_raw.json  mathematical_raw.json
outputs/: benign_eval.json  benign_eval_v3.json  delta_h_stats.json  eval_results_single_layer.json  harm_eval.json  harm_eval_v3.json  mathematical_stats.json  probe_results_v3_fixed.json  probe_vocab_lens.json
outputs/angle_drift/: angle_drift_stats.json
scripts/: git2tarignore.py  pod_cleanup.sh  pod_setup.sh  run_all.sh  sync_from_pod.sh  sync_to_pod.sh
src/: __init__.py  config.py
src/data/: generate.py  scrape_lw.py
src/eval/: evaluate.py  metrics.py
src/mechint/: __init__.py  extract_paired.py  residual_decomp.py
src/probes/: __init__.py  extract.py  models.py  train.py  train_probes.py
src/tests/: test_narrow_evasion.py  test_selectivity.py  test_training_sanity.py
src/training/: __init__.py  finetune_chameleon.py  loss.py  trainer.py
visuals/: delta_h_heatmap.py  json2evasion_chart.py  probe_angle_drift.py  probe_timeseries.py  probe_vocab_lens.py  residual_decomp_viz.py  test_chart.py
