[project]
name = "neuralcham"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "datasets>=2.15.0",
    "groq>=0.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "peft>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.36.0",
    "wandb>=0.16.0",
]
